[gd_scene load_steps=3 format=2]

[ext_resource path="res://Actors/AnchorDetector2D.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 25.0

[node name="AnchorDetector2D" type="Area2D"]
monitorable = false
collision_layer = 0
collision_mask = 4
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_AnchorDetector2D_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_AnchorDetector2D_area_exited"]
